# EffDI

./: readme.md  setup.cfg
src/EffDI/: main.py
src/EffDI.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/compute/: __main__.py  main.py
src/demo_countries/: __main__.py  main.py  visualization.py
src/demo_country/: __main__.py  main.py  visualization.py
src/pre_compute_weights/: __main__.py  main.py
