[metadata]
name = EffDI
version = 0.1.0
author = Lukas Herrmann
author_email = lukas.herrmann@alumni.ethz.ch
description = Effective dispersion index
;long_description = file: README.md
;long_description_content_type = text/markdown
;url = https://github.com/pypa/sampleproject
;project_urls =
;    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

setup_requires =
    setuptools >=30.3.0
    wheel

install_requires =
    numpy
    matplotlib
    pandas
    scipy

[options.packages.find]
where = src
include =
    pre_compute_weights*

[options.extras_require]
full = sphinx; sphinx-rtd-theme; pytest

[options.entry_points]
console_scripts =
    EffDI = EffDI.main:main
    demo_country = demo_country.main:main
